# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
#

2005-05-15 17:36:17 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-47

    Summary:
      documentation, fix chapter 6 example
    Revision:
      itools--main--0.9--patch-47


    modified files:
     Changelog doc/examples/chapter6/TaskTracker.py doc/files2.tex


2005-05-15 17:13:14 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-46

    Summary:
      documentation, fix examples (rename directory names)
    Revision:
      itools--main--0.9--patch-46


    modified files:
     Changelog doc/files2.tex doc/stl.tex doc/xml.tex

    renamed files:
     doc/examples/chapter5/.arch-ids/=id
       ==> doc/examples/chapter6/.arch-ids/=id
     doc/examples/chapter5/.arch-ids/TaskTracker.py.id
       ==> doc/examples/chapter6/.arch-ids/TaskTracker.py.id
     doc/examples/chapter5/.arch-ids/itools.tt.id
       ==> doc/examples/chapter6/.arch-ids/itools.tt.id
     doc/examples/chapter7/.arch-ids/=id
       ==> doc/examples/chapter8/.arch-ids/=id
     doc/examples/chapter7/.arch-ids/hello.xml.id
       ==> doc/examples/chapter8/.arch-ids/hello.xml.id
     doc/examples/chapter7/.arch-ids/namespaces.py.id
       ==> doc/examples/chapter8/.arch-ids/namespaces.py.id
     doc/examples/chapter7/.arch-ids/parser.py.id
       ==> doc/examples/chapter8/.arch-ids/parser.py.id
     doc/examples/chapter8/.arch-ids/=id
       ==> doc/examples/chapter9/.arch-ids/=id
     doc/examples/chapter8/.arch-ids/TaskTracker.py.id
       ==> doc/examples/chapter9/.arch-ids/TaskTracker.py.id
     doc/examples/chapter8/.arch-ids/TaskTracker_view.xml.id
       ==> doc/examples/chapter9/.arch-ids/TaskTracker_view.xml.id
     doc/examples/chapter8/.arch-ids/itools.tt.id
       ==> doc/examples/chapter9/.arch-ids/itools.tt.id
     doc/examples/chapter8/.arch-ids/template.xml.id
       ==> doc/examples/chapter9/.arch-ids/template.xml.id

    new directories: