@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
 #
 
+2005-05-15 17:43:13 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-48
+
+    Summary:
+      documentation, fix chapter 9 example
+    Revision:
+      itools--main--0.9--patch-48
+
+
+    modified files:
+     Changelog doc/examples/chapter9/TaskTracker.py doc/stl.tex
+
+
 2005-05-15 17:36:17 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-47
 
     Summary:
